[package]
name = "math_tutor_esp32"
version = "0.1.0"
authors = ["Nicholas Romero"]
edition = "2021"

[dependencies]
esp32c3-hal = "0.2.0"
esp-backtrace = { version = "0.2.0", features = [
    "esp32c3",
    "panic-handler",
    "print-uart",
] }
riscv-rt = { version = "0.9", optional = true }
esp-println     = { version = "0.6.0", features = ["esp32c3"] }

[features]
default = ["rt"]
rt = ["riscv-rt"]
