[package]
name = "math_tutor_terminal_unikernal"
version = "0.1.0"
authors = ["Nicholas Romero"]
edition = "2021"

[target.'cfg(target_os = "hermit")'.dependencies]
hermit = "0.6"

[features]
default = ["pci", "acpi"]
vga = ["hermit/vga"]
pci = ["hermit/pci"]
pci-ids = ["hermit/pci-ids"]
acpi = ["hermit/acpi"]
fsgsbase = ["hermit/fsgsbase"]
smp = ["hermit/smp"]
instrument = ["hermit/instrument"]
fs = ["hermit/fs"]